syntax = "proto3";

package com.rahim.proto.protobuf.email;

option java_multiple_files = true;

enum EmailTemplate {
  UNKNOWN = 0;
  VERIFICATION_REQUEST = 1;
  VERIFICATION_SUCCESS = 2;
}

message AccountVerificationData {
  string verification_code = 1;
  string expiration_time = 2;
}

message EmailRequest {
  string recipientEmail = 1;
  EmailTemplate template = 2;

  string firstName = 3;
  string lastName = 4;
  string username = 5;
  oneof templateData {
    AccountVerificationData verification_data = 6;
  }
}